1. 删除部分UTF-8问题字符 2. 修改部分Java已经过时的函数 3. 解决编译报错问题 4. 修复在列举可用设备的时候出现Exception的问题